# agent.ailydian.com

./: .env.example  .gitignore  .vercelignore  AILYDIAN_BACKEND_EXAMPLE.py  AILYDIAN_INTEGRATION.md  ANALIZ_RAPORU.md  DEMO_PAGE_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_ORCHESTRATOR.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_SUCCESS.md  FINAL_IMPLEMENTATION.md  FINAL_REPORT_2025-12-25.md  FRONTEND_COMPLETION_SUMMARY.md  GLOBAL_GELISTIRME_PLANI_2025.md  HEMEN_BAŞLAT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_2025-12-25.md  LAUNCH_WEBSITE.md  LICENSE  LOCALHOST_GUIDE.md  LOCALHOST_KULLANIM_KILAVUZU.md  LOCALHOST_TEST_REPORT.md  LYDIAN_AGENT_LAUNCH.md  MOBIL_DUZELTME_RAPORU.md  NOTICE  ORCHESTRATOR_IMPLEMENTATION.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STRUCTURE.txt  QUICK_START.md  README.md  RESPONSIVE_MOBILE_IMPLEMENTATION.md  RUN_ME_FIRST.md  RUN_NOW.sh  RUN_PRODUCTION.md  SECURITY.md  SISTEM_TAMAMLANDI.md  START_LOCALHOST.sh  START_SIMPLE.sh  SYSTEM_STATUS.md  (+25 more)
agents/clinical-decision/: __init__.py  agent.py
agents/diagnosis/: __init__.py  agent.py
agents/emergency_response/: __init__.py  agent.py
agents/patient-monitoring/: __init__.py  agent.py  real_time_monitor.py
agents/pharmacy/: __init__.py  agent.py
agents/resource-optimization/: __init__.py  agent.py  quantum_scheduler.py
agents/treatment/: __init__.py  agent.py
alembic/: env.py
alembic/versions/: 001_add_user_hospital_models.py
api/: index.py  orchestrator_api.py
api/routes/: __init__.py  diagnosis.py  emergency.py  (+2 more)
core/: __init__.py
frontend/: manifest.json  robots.txt  service-worker.js  sitemap.xml
scripts/: start_local.sh  test_api.py
tests/: conftest.py  test_clinical_decision.py
venv312/: pyvenv.cfg
(+119 files in other folders)
