[project]
name = "healthcare-ai-quantum-system"
version = "1.0.0"
description = "World's First Quantum-Enhanced Multi-Agent Healthcare Management Platform"
authors = [{name = "Healthcare AI Team", email = "team@healthcare-ai-quantum.com"}]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.poetry]
name = "healthcare-ai-quantum-system"
version = "1.0.0"
description = "World's First Quantum-Enhanced Multi-Agent Healthcare Management Platform"
authors = ["Healthcare AI Team <team@healthcare-ai-quantum.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=. --cov-report=html --cov-report=term"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
